@@ -1,4 +1,4 @@
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_in_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'b' should be in range [<any>, Y].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_in_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'b' should be in range [<any>, 'Y'].
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_numeric_value_with_su_range_test: NOTE, data item '_ddl1_enumeration_range_numb_full_no_su' value '-9.14(10)' is not permitted to contain the appended standard uncertainty value '(10)'.
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_numeric_value_with_su_range_test: NOTE, data item '_ddl1_enumeration_range_numb_full_no_su' value '-9.14(10)' should be in range [-3.14, 42.0].
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_numeric_value_with_su_range_test: NOTE, data item '_ddl1_enumeration_range_numb_full_no_su' value '-9.14(300)' is not permitted to contain the appended standard uncertainty value '(300)'.
@@ -10,10 +10,10 @@ scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_numeric
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_numeric_range: NOTE, data item '_ddl1_enumeration_range_numb_full_with_su' value '99' should be in range [-3.14, 42.0].
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_numeric_range: NOTE, data item '_ddl1_enumeration_range_numb_lower_with_su' value '-99' should be in range [-3.14, +inf).
 scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_numeric_range: NOTE, data item '_ddl1_enumeration_range_numb_upper_with_su' value '99' should be in range (-inf, 42.0].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'A' should be in range [B, y].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'b(5)' violates range constraints -- the values should consist of a single character from the range [B, y].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'z' should be in range [B, y].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_lower' value 'A' should be in range [b, <any>].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_lower' value 'b(5)' violates range constraints -- the values should consist of a single character from the range [b, <any>].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'b(5)' violates range constraints -- the values should consist of a single character from the range [<any>, Y].
-scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'z' should be in range [<any>, Y].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'A' should be in range ['B', 'y'].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'b(5)' violates range constraints -- the values should consist of a single character from the range ['B', 'y'].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_full' value 'z' should be in range ['B', 'y'].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_lower' value 'A' should be in range ['b', <any>].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_lower' value 'b(5)' violates range constraints -- the values should consist of a single character from the range ['b', <any>].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'b(5)' violates range constraints -- the values should consist of a single character from the range [<any>, 'Y'].
+scripts/cif_validate: tests/cases/cif_validate_010.inp data_value_not_in_char_range: NOTE, data item '_ddl1_enumeration_range_char_upper' value 'z' should be in range [<any>, 'Y'].
