@@ -15,6 +15,9 @@ cod-tools (unreleased)
     - cif_validate:
       - updated the dictionary handling logic to merge all DDL1
         dictionaries into a single virtual dictionary.
+    - COD::CIF::DDL::Ranges:
+      - updated the range_to_string_char() subroutine to add single
+        quotes around the range limits.
     - molcif2sdf:
       - replaced call to 'babel' with 'obabel' to be compatible with
         all versions of Open Babel.
